@@ -23,6 +23,7 @@ allprojects {
     apply plugin: "java-library"
 
     repositories {
+        mavenLocal()
         mavenCentral()
         maven { url = "https://repo.spring.io/snapshot" }
         maven { url = "https://repo.spring.io/milestone" }
@@ -33,9 +34,6 @@ allprojects {
     }
 
     java {
-        toolchain {
-            languageVersion = JavaLanguageVersion.of(17)
-        }
         registerFeature("optionalSupport") {
             usingSourceSet(sourceSets.optionalSupport)
         }
@@ -57,6 +55,8 @@ allprojects {
         annotationProcessor("org.projectlombok:lombok")
         testCompileOnly("org.projectlombok:lombok")
         testAnnotationProcessor("org.projectlombok:lombok")
+        // https://docs.gradle.org/current/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
+        testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     }
 
     compileJava {
@@ -71,13 +71,9 @@ allprojects {
 
     test {
         systemProperties("spring.cloud.compatibility-verifier.enabled": "false")
-
         useJUnitPlatform()
 
-        dependencies {
-            // https://docs.gradle.org/current/userguide/upgrading_version_8.html#test_framework_implementation_dependencies
-            testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-        }
+        jvmArgs("-XX:+EnableDynamicAgentLoading")
     }
 
     afterEvaluate {
